--- a/styles.scss
+++ b/styles.scss
@@ -1,9 +1,10 @@
 /*-- scss:defaults --*/
 
-@import 'https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap';
+/* Import Computer Modern Unicode Serif */
+@import url('https://cdn.jsdelivr.net/npm/computer-modern@1.0.0/cmun-serif.css');
 
-$font-family: "Roboto", sans-serif;
-$font-family-serif: "Roboto", sans-serif;
+$font-family: "CMU Serif", serif;
+$font-family-serif: "CMU Serif", serif;
 
 /*-- scss:rules --*/
 kbd,
