--- a/styles.scss
+++ b/styles.scss
@@ -5,7 +5,7 @@
 $font-family: "Roboto", sans-serif;
 $font-family-serif: "Roboto", sans-serif;
 
-body {
+body.index {
     font-family: "CMU Serif", serif !important;
 }
 
